--- a/styles.css
+++ b/styles.css
@@ -91,13 +91,13 @@ a {
 }
 
 .site-name {
-    font-size: 1.75rem;
+    font-size: 2rem;
     font-weight: bold;
     font-family: fantasy;
-    margin: auto;
+    margin-left: var(--spacing-sm);
+    margin-top: var(--spacing-sm);
     color: var(--color-white);
-    /* text-shadow: 4px 4px var(--color-primary); */
-    /* border-radius: var(--border-radius-lg); */
+    text-shadow: 1px 1px var(--color-primary);
 
 }
 
@@ -156,13 +156,11 @@ a {
 /* =========================*/
 
 .sidebar {
-    width: var(--sidebar-width);
+    width: 20%;
     padding: var(--spacing-lg);
-    margin-left: var(--spacing-xl);
     height: 100%;
     overflow-y: auto;
     position: sticky;
-    top: var(--header-height);
 }
 
 .sidebar-header {
@@ -255,7 +253,8 @@ a {
 
 .feed {
     flex: 2;
-    padding: var(--spacing-xl);
+    padding-left: var(--spacing-xl);
+    padding-right: var(--spacing-xl);
     overflow-y: auto;
     height: 100%;
     max-width: 800px;
@@ -281,7 +280,7 @@ a {
     background-color: var(--color-background);
     border-radius: var(--border-radius-md);
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    padding: var(--spacing-lg);
+    padding: var(--spacing-sm);
     margin-bottom: var(--spacing-xl);
 }
 
@@ -478,9 +477,8 @@ a {
 /* =====================*/
 
 .profile-sidebar {
-    width: 20%;
+    width: 25%;
     padding: var(--spacing-lg);
-    margin-right: var(--spacing-xs);
 }
 
 .profile-header {
