--- a/styles.css
+++ b/styles.css
@@ -228,7 +228,6 @@ a {
     margin-top: var(--spacing-md);
     padding-top: var(--spacing-sm);
     margin-bottom: var(--spacing-lg);
-    margin-left: var(--spacing-xl);
 }
 
 .profileBio-content {
@@ -256,8 +255,6 @@ a {
     padding-right: var(--spacing-xl);
     overflow-y: auto;
     height: 100%;
-    max-width: 800px;
-    margin: 0 auto;
     border-left: 2px solid var(--color-accent);
     border-right: 2px solid var(--color-accent);
 }
@@ -288,13 +285,13 @@ a {
     border-bottom: 1px solid var(--color-accent);
 }
 
-.user-avatar {
-    width: 50px;
-    height: 50px;
+#profile-picture {
+    width: 20%;
     border-radius: 50%;
     display: flex;
     justify-content: center;
-    margin-right: var(--spacing-md);
+    margin-left: auto;
+    margin-right: auto;
 }
 
 .user-info {
